--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@
   font-family: 'Kumbh Sans', sans-serif;
   scroll-behavior: smooth;
 }
+
+.hero-background {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 1)),
+    linear-gradient(to top, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.85)),
+    url(https://images.pexels.com/photos/2507025/pexels-photo-2507025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
